<resources>
    <string name="app_name" translatable="false">YumeList</string>
    <string name="title_home">Home</string>
    <string name="title_anime_list">Anime</string>
    <string name="title_manga_list">Manga</string>
    <string name="lorem_ipsun" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="stats">Stats</string>
    <string name="synopsis">Synopsis</string>
    <string name="more_info">More information</string>
    <string name="synonyms">Synonyms</string>
    <string name="jp_title">Japanese</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="season">Season</string>
    <string name="broadcast">Broadcast</string>
    <string name="duration">Duration</string>
    <string name="source">Source</string>
    <string name="studios">Studios</string>
    <string name="edit">Edit</string>
    <string name="authors">Authors</string>
    <string name="volumes">Volumes</string>
    <string name="serialization">Serialization</string>
    <string name="login">Login</string>
    <string name="no_results">No results</string>
    <string name="title_profile">Profile</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="episodes">Episodes</string>
    <string name="episode">Episode</string>
    <plurals name="num_episodes">
        <item quantity="one">%d episode</item>
        <item quantity="other">%d episodes</item>
    </plurals>
    <string name="chapters">Chapters</string>
    <string name="chapter">Chapter</string>
    <plurals name="num_chapters">
        <item quantity="one">%d chapter</item>
        <item quantity="other">%d chapters</item>
    </plurals>
    <string name="delete">Delete</string>
    <string name="watching">Watching</string>
    <string name="reading">Reading</string>
    <string name="completed">Completed</string>
    <string name="on_hold">On Hold</string>
    <string name="dropped">Dropped</string>
    <string name="ptw">Plan to Watch</string>
    <string name="ptr">Plan to Read</string>
    <string name="settings">Settings</string>
    <string name="anime_ranking">Anime Ranking</string>
    <string name="manga_ranking">Manga Ranking</string>
    <string name="seasonal_chart">Seasonal Chart</string>
    <string name="random">Random</string>
    <string name="today">Today</string>
    <string name="nothing_today">Nothing today\n( ≧Д≦)</string>
    <string name="this_season">This Season</string>
    <string name="recommendations">Recommendations</string>
    <string name="total_entries">Total: %s</string>
    <string name="anime_count">%d Anime</string>
    <string name="mean_score">Mean Score</string>
    <string name="rewatched">Rewatched</string>
    <string name="view_profile_mal">View profile on MAL</string>
    <string name="airing_in">Airing in %s</string>
    <string name="score_value">Score: %s</string>
    <string name="plus_one">+1</string>
    <string name="minus_one">-1</string>
    <string name="add">Add</string>
    <string name="unknown">Unknown</string>
    <string name="unspecified">Unspecified</string>
    <string name="top_ranked">Top Ranked</string>
    <string name="members">Members</string>
    <string name="users_scores">Users scores</string>
    <string name="popularity">Popularity</string>
    <string name="error_server">Error connecting to server</string>
    <string name="tv">TV</string>
    <string name="ova">OVA</string>
    <string name="ona">ONA</string>
    <string name="movie">Movie</string>
    <string name="special">Special</string>
    <string name="music">Music</string>
    <string name="manga">Manga</string>
    <string name="anime">Anime</string>
    <string name="one_shot">One Shot</string>
    <string name="manhwa">Manhwa</string>
    <string name="novel">Novel</string>
    <string name="doujinshi" translatable="false">Doujinshi</string>
    <string name="airing">Airing</string>
    <string name="finished">Finished</string>
    <string name="on_hiatus">On Hiatus</string>
    <string name="winter">Winter</string>
    <string name="spring">Spring</string>
    <string name="summer">Summer</string>
    <string name="fall">Fall</string>
    <string name="original">Original</string>
    <string name="light_novel">Light Novel</string>
    <string name="visual_novel">Visual Novel</string>
    <string name="game">Game</string>
    <string name="web_manga">Web Manga</string>
    <string name="score_apalling">Appalling</string>
    <string name="score_horrible">Horrible</string>
    <string name="score_very_bad">Very Bad</string>
    <string name="score_bad">Bad</string>
    <string name="score_average">Average</string>
    <string name="score_fine">Fine</string>
    <string name="score_good">Good</string>
    <string name="score_very_good">Very Good</string>
    <string name="score_great">Great</string>
    <string name="score_masterpiece">Masterpiece</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="not_yet_aired">Not Yet Aired</string>
    <string name="publishing">Publishing</string>
    <string name="days">Days</string>
    <string name="search">Search</string>
    <string name="theme">Theme</string>
    <string name="show_nsfw">Show NSFW content</string>
    <string name="nsfw_summary">I confirm that I\'m over 18.</string>
    <string name="default_section">Default section</string>
    <string name="display">Display</string>
    <string name="logout">Log Out</string>
    <string name="logout_summary">Log out only from YumeList, not MAL.</string>
    <string name="version">Version</string>
    <string name="discord" translatable="false">Discord</string>
    <string name="github" translatable="false">GitHub</string>
    <string name="credits">Credits</string>
    <string name="discord_summary">Join the official server!</string>
    <string name="github_summary">Star the repository!</string>
    <string name="credits_summary">People who helped me</string>
    <string name="feedback">Send feedback</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_system">Follow system</string>
    <string name="title_details">Details</string>
    <string name="view_on_mal">View on MAL</string>
    <string name="share">Share</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="sort_title">Title</string>
    <string name="sort_score">Score</string>
    <string name="sort_last_updated">Last updated</string>
    <string name="sort_by">Sort by</string>
    <string name="ok">OK</string>
    <string name="support">Support</string>
    <string name="logo_design">Logo design</string>
    <string name="general_help">General help</string>
    <string name="api_help">MyAnimeList API help</string>
    <string name="translations">Translations</string>
    <string name="genre_action">Action</string>
    <string name="genre_adventure">Adventure</string>
    <string name="genre_cars">Cars</string>
    <string name="genre_comedy">Comedy</string>
    <string name="genre_dementia">Dementia</string>
    <string name="genre_demons">Demons</string>
    <string name="genre_drama">Drama</string>
    <string name="genre_ecchi">Ecchi</string>
    <string name="genre_fantasy">Fantasy</string>
    <string name="genre_game">Game</string>
    <string name="genre_harem">Harem</string>
    <string name="genre_hentai">Hentai</string>
    <string name="genre_historical">Historical</string>
    <string name="genre_horror">Horror</string>
    <string name="genre_josei">Josei</string>
    <string name="genre_kids">Kids</string>
    <string name="genre_magic">Magic</string>
    <string name="genre_martial_arts">Martial Arts</string>
    <string name="genre_mecha">Mecha</string>
    <string name="genre_military">Military</string>
    <string name="genre_music">Music</string>
    <string name="genre_mystery">Mystery</string>
    <string name="genre_parody">Parody</string>
    <string name="genre_police">Police</string>
    <string name="genre_psychological">Psychological</string>
    <string name="genre_romance">Romance</string>
    <string name="genre_samurai">Samurai</string>
    <string name="genre_school">School</string>
    <string name="genre_sci_fi">Sci-Fi</string>
    <string name="genre_seinen">Seinen</string>
    <string name="genre_shoujo">Shoujo</string>
    <string name="genre_shoujo_ai">Shoujo Ai</string>
    <string name="genre_shounen">Shounen</string>
    <string name="genre_shounen_ai">Shounen Ai</string>
    <string name="genre_slice_of_life">Slice of Life</string>
    <string name="genre_space">Space</string>
    <string name="genre_sports">Sports</string>
    <string name="genre_superpower">Super Power</string>
    <string name="genre_supernatural">Supernatural</string>
    <string name="genre_thriller">Thriller</string>
    <string name="genre_vampire">Vampire</string>
    <string name="genre_yaoi">Yaoi</string>
    <string name="genre_yuri">Yuri</string>
    <string name="relation_prequel">Prequel</string>
    <string name="relation_sequel">Sequel</string>
    <string name="relation_summary">Summary</string>
    <string name="relation_alternative_version">Alternative version</string>
    <string name="relation_other">Other</string>
    <string name="relation_side_story">Side story</string>
    <string name="relation_alternative_setting">Alternative setting</string>
    <string name="relation_spin_off">Spin-off</string>
    <string name="translate">Translate</string>
    <string name="adaptation">Adaptation</string>
    <string name="filters">Filters</string>
    <string name="manhua">Manhua</string>
    <string name="discontinued">Discontinued</string>
    <string name="opening">Opening Themes</string>
    <string name="ending">Ending Themes</string>
    <string name="copied">Copied!</string>
    <string name="login_browser_warning">Try with another browser if you can\'t login.</string>
    <string name="parent_story">Parent story</string>
    <string name="hour_abbreviation">h</string>
    <string name="minutes_abbreviation">min</string>
    <string name="full_story">Full story</string>
    <string name="theme_black">Black</string>
    <string name="aired_ago">Aired %s ago</string>
    <string name="anime_stats">Anime Stats</string>
    <string name="delete_confirmation">Are you sure you want to delete this entry?</string>
    <string name="loading">Loading</string>
    <string name="anime_manga_news"><![CDATA[Anime & Manga News]]></string>
    <string name="mal_announcements">MyAnimeList Announcements</string>
    <string name="about">About</string>
    <string name="mal_announcements_summary">Updates, changes, and additions to MAL.</string>
    <string name="news_summary">Latest information about the industry.</string>
    <string name="more">More</string>
    <string name="upcoming">Upcoming</string>
    <string name="favorite">Favorite</string>
    <string name="use_external_browser">Use external browser</string>
    <string name="calendar">Calendar</string>
    <string name="english">English</string>
    <string name="language">Language</string>
    <string name="japanese">Japanese</string>
    <string name="all">All</string>
</resources>