<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/display">

        <ListPreference
            app:key="theme"
            app:title="@string/theme"
            app:summary="%s"
            app:icon="@drawable/ic_round_color_lens_24"
            app:entries="@array/theme_options"
            app:entryValues="@array/theme_options_values"
            app:defaultValue="follow_system" />
        <SwitchPreferenceCompat
            app:icon="@drawable/ic_round_block_24"
            app:key="nsfw"
            app:defaultValue="false"
            app:summary="@string/nsfw_summary"
            app:title="@string/show_nsfw" />

        <ListPreference
            app:key="app_language"
            app:title="@string/language"
            app:summary="%s"
            app:icon="@drawable/ic_round_language_24"
            app:entries="@array/language_options"
            app:entryValues="@array/language_options_values"
            app:defaultValue="null"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/startup">

        <ListPreference
            app:key="default_section"
            app:title="@string/default_section"
            app:summary="%s"
            app:icon="@drawable/ic_round_sort_24"
            app:entries="@array/section_options"
            app:entryValues="@array/section_options_values"
            app:defaultValue="home"/>

    </PreferenceCategory>

</PreferenceScreen>
