<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/selector_home"
        android:enabled="true"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_anime_list"
        android:icon="@drawable/selector_anime"
        android:enabled="true"
        android:title="@string/title_anime_list" />

    <item
        android:id="@+id/navigation_manga_list"
        android:icon="@drawable/selector_manga"
        android:enabled="true"
        android:title="@string/title_manga_list" />

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_more_horizontal"
        android:enabled="true"
        android:title="@string/more" />

</menu>